--- a/HTML/heading_style.html
+++ b/HTML/heading_style.html
@@ -11,6 +11,6 @@
             <h4>Gattu Niharika</h4>
             <h5>Gattu Niharika</h5>
             <h6>Gattu Niharika</h6>
-            <h21>Gattu Niharika</h21>// h7 to infinity same type of style  not a heading  why becuz the words are dark black
+            <h21>Gattu niharika</h21>// h7 to infinity same type of style  not a heading  why becuz the words are dark black
             </body>
     </html>
